# odeSolver

./: CMakeLists.txt  README.md  main.cpp  plot.py
include/: default_operations.hpp  driver_adapt.hpp  driver_const.hpp  euler.hpp  euler_im.hpp  matrix_algebra.hpp  resize.hpp  runge_kutta.hpp  runge_kutta_adapt.hpp  standard_algebra.hpp
